# scanpdf-toc

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/pdf_toc/: __init__.py  cli.py  generator.py
src/scanpdf_toc/: __init__.py  __main__.py  cli.py  generator.py
tests/: test_cli.py  test_generator.py
