[project]
name = "scanpdf-toc"
version = "0.1.0"
description = "LLM-assisted bookmark generator for scanned PDFs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "scanpdf-toc contributors" }
]
keywords = ["pdf", "toc", "bookmarks", "openai", "openrouter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "openai>=1.52.2",
  "pillow>=12.0.0",
  "pymupdf>=1.24.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.12.0",
]

[project.scripts]
scanpdf-toc = "scanpdf_toc.cli:main"
pdf-toc = "scanpdf_toc.cli:main"

[project.urls]
Homepage = "https://github.com/devinhurry/scanpdf-toc"
Repository = "https://github.com/devinhurry/scanpdf-toc"
Issues = "https://github.com/devinhurry/scanpdf-toc/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scanpdf_toc*", "pdf_toc*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
